app/assets/stylesheets/unc_custom.css.scss
/** Homepage customizations **/
$carolina-blue-dark: #13294b;
$carolina-blue: #4b9cd3;
$text-color: white;
$light-gray: lightgray;
$shadow-base-top: 0 10px 10px -10px;
$shadow-base-bottom: 0 -10px 10px -10px;
$shadow: inset $shadow-base-top #000;
$description-shadow: inset $shadow-base-top gray;

// Overridden Bootstrap variables. Bumps the font down to 14px
$font-size-base: .875rem;
$font-size-sm: $font-size-base;

@font-face {
  font-family: LibreBaskerville;
  src: url(asset-path("libre-baskerville/LibreBaskerville-Italic.otf")) format("opentype");
}

body {
  font-family: Verdana, Arial, sans-serif;
  margin-bottom: 0;
}

a {
  color: #2a62bc;
}

#logo {
  img {
    max-height: 30px;
    margin: auto;
  }
}

#user-util-links {
  ul.navbar-nav {
    padding-left: 0;
  }
}

.navbar-static-top {
  .navbar-nav {
    margin-left: 0;
  }
}

// Fixes https://github.com/samvera/hyrax/blob/main/app/assets/stylesheets/hyrax/_facets.scss#L6
// Which causes the toggle icon to never display
.navbar-toggler-icon {
  display: inline-block;
}

.navbar-light {
  .navbar-nav {
    .nav-link {
      &:hover,
      &:focus {
        color: black;
      }
    }
  }
}

span.institution_name {
  font-family: LibreBaskerville, sans-serif;

  a, a:hover, a:visited {
    color: $text-color;
    text-decoration: none;
  }
}

.skip-to-content {
  background-color: white;

  a {
    color: $carolina-blue-dark;
  }
}

.notify-number {
  span.label {
    font-size: 100%;
  }
}

#masthead {
  background-color: $carolina-blue-dark !important;
  margin-bottom: 0;
  max-height: 56px;

  &+ nav {
    margin-top: 0;
  }
}

.image-masthead {
  margin-bottom: 0;
  height: 225px;
  box-shadow: $shadow;
  border-bottom: 0;
  z-index: 1;

  .background-container {
    -ms-filter: none;
    -webkit-filter: none;
    filter: none;
    box-shadow: 0 1px 10px #000c;
  }

  .background-container-gradient {
    background: none;
  }
}

.advanced_search {
  float: right;
  margin: 0 1rem 0 0;
  &:hover {
    text-decoration: none;
  }
}

.advanced-search-form {
  .adv-date-year-range {
    margin-left: -37.5%;
    .form-control {
      width: 6rem;
    }
    .form-inline {
      margin-left: 0;
    }
    .col-form-label {
      font-weight: bold;
    }
  }
}

.file_set.attributes .btn-group a {
  color: black !important;
  &:hover {
    text-decoration: none;
  }
}

#unc-search {
  background-color: $carolina-blue;
  height: 45%;
  padding-top: 15px;
  margin-right: 0;
  color: $text-color;

  .repo-name {
    font-family: LibreBaskerville, sans-serif;
    padding-left: 15px;
    white-space: nowrap;
  }

  img.banner-img {
    max-width: 300px;
    max-height: 60%;
    padding-left: 15px;
  }

  .fa-arrow-circle-up {
    color: $text-color;
  }

  .advanced_search {
    color: $text-color;
    font-size: 1.2rem;
    font-weight: bold;

    &:hover {
      color: $light-gray;
      text-decoration: none;
    }
  }
}

#advanced_search {
  .form-group {
    display: inline-flex;
    width: 100%;

    label {
      font-weight: bold;
    }
  }
}

nav.breadcrumb {
  background-color: #f8f9fa;
}

.badge-primary {
  background-color: #13294b;
}

form .nav-link:not(.active),
.help-block a,
#collapsePublic a,
#unc-featured a {
  text-decoration: underline;
}

form .nav-link:not(.active),
#my_nav .nav-link:not(.active),
.thumbnail-title-wrapper a,
.ensure-wrapped a,
.page-item .page-link,
.media-body a,
.btn-link {
  color: #2a62bc;
}

.navbar-light .navbar-nav .nav-link {
  color: rgb(0, 0, 0);
}

.link-tabs {
  background-color: $carolina-blue;

  ul {
    margin-bottom: 0;

    li {
      display: inline-block;
    }

    div {
      border: 1px outset $carolina-blue-dark;
      background-color: $carolina-blue-dark;
      height: 40px;
      padding:8px;
      &:hover {
        background-color: #1c4c80;
      }

      a {
        color: $text-color;
        &:hover {
          color: $light-gray;
          text-decoration: none;
        }
      }
    }
  }
}

.site-title.h1 {
  padding-top: 20px;
}

#unc-text {
  color: $text-color !important;

  div {
    margin: 0 auto;
  }

  p {
    background-color: rgba(0, 0, 0, 0.6);
    text-align: center;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
    padding: 10px;
    font-size: 2.6rem;
    line-height: 43px;
  }

  blockquote {
    border-left: none;
  }
}

#unc-deposit {
  background-color: $carolina-blue;
  color: $text-color;
  padding-left: 0;
  padding-right: 30px;

  h2 {
    margin-top: 15px;
  }

  a {
    color: $text-color;
    font-weight: bold;

    &:hover {
      color: $light-gray;
    }

    div {
      font-size: 21px;
    }
  }

  .unc-block {
    display: inline-block;
    margin-top: 25px;
  }

  i, div {
    margin-bottom: 15px;
  }
}

#unc-description {
  padding-top: 25px;

  .describe {
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;

    -ms-flex-direction: row;
    -webkit-flex-direction: row;
    flex-direction: row;

    -ms-flex-align: center;
    -webkit-align-items: center;
    align-items: center;
  }

  img {
    max-width: 20%;
    margin: 0 0 0 5%;
  }

  p {
    font-size: 16px;
  }
}

#unc-featured {
  background-color: #f6f6f6;
  box-shadow: $description-shadow;
  padding: 0 10px;

  .is-featured {
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;

    -webkit-justify-content: center;
    justify-content: center;

    -ms-flex-direction: column;
    -webkit-flex-direction: column;
    flex-direction: column;
    margin-bottom: 25px;
    margin-top: 25px;

    min-height: 200px;

    img {
      max-width: 200px;
      max-height: 175px;
    }

    .featured-author + p {
      margin-top: -10px;
    }
  }

  h2 {
    margin-top: 15px;
    margin-bottom: 50px;
  }

  .featured-item-title {
    margin-top: 15px;
  }
}

.collections-browse {
  margin: .7rem 0 -0.5rem 0;
  font-size: 1.9rem;
}
/* ... */

